
MASTER

* Fixed namespace in calling test_sqlserver_odbc within test_unicode_types. [Gary/iawgens]

* Columns with multi-line defaults work correctly. [bfabry]


* 2.2.22 * (October 15th, 2009)

* Support Identity-key-column judgement on multiple schema environment [Ken Tachiya]

* Add support for tinyint data types. In MySQL all these types would be boolean, however in 
  our adapter, they will use the full 1 => 255 Fixnum value as you would expect. [Ken Collins]


* 2.2.21 * (September 10th, 2009)

* Changes for gem best practices per http://weblog.rubyonrails.org/2009/9/1/gem-packaging-best-practices
  Details of such are as follows: [Ken Collins]
  - Removed rails-sqlserver-2000-2005-adapter.rb load file for old github usage.
  - Move the core_ext directory to active_record/connection_adapters/sqlserver_adapter/core_ext
  - Renamespace SQLServerDBI to ActiveRecord::ConnectionAdapters::SQLServerCoreExtensions::DBI
  - Renamespace ActiveRecord::ConnectionAdapters::SQLServerActiveRecordExtensions to ActiveRecord::ConnectionAdapters::SQLServerCoreExtensions::ActiveRecord


* 2.2.20 * (September 10th, 2009)

* Implement a new remove_default_constraint method that uses sp_helpconstraint [Ken Collins]

* Use a lazy match in add_order_by_for_association_limiting! to allow sub selects to be used. Resolves 
  ticket #11.

* Add default rake task back for testing. Runs the namespaced sqlserver:test_sqlserver_odbc. 
  Resolves ticket #10 [Ken Collins]

* Default value detection in column_definitions is kinder to badly formatted, or long winded user
  defined functions, for default values. Resolves ticket #8 [Ken Collins]

* Make sure bigint SQL Server data type can be used and converted back to Bignum as expected. [Ken Collins]


* 2.2.19 * (June 19th, 2009)

* Leave quoted column names as is. Resolves ticket #36 [Vince Puzzella]

* Changing add_limit! in ActiveRecord::Base for SQLServer so that it passes through any scoped :order 