@@ -328,10 +328,14 @@ class AdapterTestSqlserver < ActiveRecord::TestCase
     
     setup do
       @identity_insert_sql = "INSERT INTO [funny_jokes] ([id],[name]) VALUES(420,'Knock knock')"
+      @identity_insert_sql_unquoted = "INSERT INTO funny_jokes (id, name) VALUES(420, 'Knock knock')"
+      @identity_insert_sql_unordered = "INSERT INTO [funny_jokes] ([name],[id]) VALUES('Knock knock',420)"
     end
     
-    should 'return quoted table_name to #query_requires_identity_insert? when INSERT sql contains id_column' do
+    should 'return quoted table_name to #query_requires_identity_insert? when INSERT sql contains id column' do
       assert_equal '[funny_jokes]', @connection.send(:query_requires_identity_insert?,@identity_insert_sql)
+      assert_equal '[funny_jokes]', @connection.send(:query_requires_identity_insert?,@identity_insert_sql_unquoted)
+      assert_equal '[funny_jokes]', @connection.send(:query_requires_identity_insert?,@identity_insert_sql_unordered)
     end
     
     should 'return false to #query_requires_identity_insert? for normal SQL' do
